Blog post 2022-05-06, CodeDump added dockerfiles and WSL write-up

--- a/data/posts/2021-04-03.md
+++ b/data/posts/2021-04-03.md
@@ -1,5 +1,7 @@
 # Weird Kotlin Compiler Error
 
+_Edited: 2022-05-06_
+
 This is not at all a useful discovery, the code below generates an obscure
 compiler error. It is a visibility violation. Normally, the violation would be
 reported as `Cannot access '<init>': it is protected in 'Example'`. But because
@@ -18,5 +20,7 @@ fun getConstructor() = if (true) ::Example else null
 fun main() {
 }
 ```
+
+_Edit:_ The error has been fixed in release 1.6 subsequently.
 
 [playground]: https://play.kotlinlang.org/
